--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
     </head>
     <body>
         <h1>Hello world</h1>
+        <p>This is my test webpage for learning html</p>
+        <ul>
+            <li>thing 1</li>
+            <li>thing 2</li>
+            <li>thing 3</li>
+        </ul>
     </body>
 </html>
