added list and paragraph

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
             <li>thing 2</li>
             <li>thing 3</li>
         </ul>
+        <img src="image.png" alt="Picture of something">
     </body>
 </html>
