added second page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             <li>thing 3</li>
         </ul>
         <img src="image.png" alt="Picture of something">
+        <a href=""secondpage.html>Link to second page</a>
     </body>
 </html>
